deploy/fddb-exporter/templates/fddb-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fddb-exporter
  name: fddb-exporter
  namespace: fddb-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fddb-exporter
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fddb-exporter
    spec:
      containers:
      - image: ghcr.io/itobey/fddb-exporter/fddb-exporter:0.3.1
        imagePullPolicy: IfNotPresent
        name: fddb-exporter
      restartPolicy: Always
