deploy/fddb-exporter/templates/fddb-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fddb-exporter
  namespace: fddb-exporter
  labels:
    app: fddb-exporter
spec:
  ports:
    - port: 8080
  selector:
    app: fddb-exporter
  type: ClusterIP
