deploy/fddb-exporter/templates/fddb-exporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: fddb-exporter
  namespace: fddb-exporter
spec:
  rules:
  - host: fddb-exporter.nuc.local
    http:
      paths:
      - backend:
          service:
            name: fddb-exporter
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
